--- a/home/templates/home/main.html
+++ b/home/templates/home/main.html
@@ -5,6 +5,6 @@
 
     <ul>
 <li><p><a href="/ads">Show ADS</a></p></li>
-<li><p><a href="/create">Create AD</a></p></li>
+<li><p><a href="{%url 'ads:ad_create' %}">Create AD</a></p></li>
 </ul>
 {% endblock content %}
