--- a/ads/templates/ads/ad_list.html
+++ b/ads/templates/ads/ad_list.html
@@ -35,9 +35,9 @@
 <p>
 <a href="{% url 'ads:ad_create' %}">Add an Ad</a> |
 {% if user.is_authenticated %}
-<a href="{% url 'logout' %}?next={% url 'ads:all' %}">Logout</a>
+<a href="{% url 'keycloak_logout' %}?next={% url 'ads:all' %}">Logout</a>
 {% else %}
-<a href="{% url 'login' %}?next={% url 'ads:all' %}">Login</a>
+<a href="{% url 'keycloak_login' %}?next={% url 'ads:all' %}">Login</a>
 {% endif %}
 </p>
 
