--- a/home/templates/base_menu.html
+++ b/home/templates/base_menu.html
@@ -18,12 +18,7 @@
         <a href="{% url 'ads:ad_create' %}">Create Ad</a>
         </li>
         <li class="dropdown">
-            <a href="#" data-toggle="dropdown" class="dropdown-toggle">
-
-            </a>
-            <ul class="dropdown-menu">
-                <li><a href="{% url 'keycloak_logout' %}?next={% url 'ads:all' %}">Logout</a></li>
-            </ul>
+          <a href="{% url 'keycloak_logout' %}?next={% url 'ads:all' %}">Logout</a>
         </li>
         {% else %}
         <li>
