--- a/home/templates/registration/login.html
+++ b/home/templates/registration/login.html
@@ -6,7 +6,7 @@
   <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="{% url 'keycloak_login' %}">
 {% csrf_token %}
 {{ form.as_p }}
 <input type="submit" class="btn btn-primary" value="Login" />
